--- a/packages/cdk-assets/package.json
+++ b/packages/cdk-assets/package.json
@@ -56,6 +56,8 @@
   },
   "dependencies": {
     "@aws-cdk/assets": "1.20.0",
+    "@aws-cdk/aws-s3-assets": "1.20.0",
+    "@aws-cdk/aws-ecr-assets": "1.20.0",
     "archiver": "^3.1.1",
     "aws-sdk": "^2.601.0",
     "camelcase": "^5.3.1",
