--- a/packages/@aws-cdk/assets/package.json
+++ b/packages/@aws-cdk/assets/package.json
@@ -65,12 +65,10 @@
   "devDependencies": {
     "@aws-cdk/assert": "1.20.0",
     "@types/minimatch": "^3.0.3",
-    "@types/nodeunit": "^0.0.30",
     "@types/sinon": "^7.5.0",
     "aws-cdk": "1.20.0",
     "cdk-build-tools": "1.20.0",
     "cdk-integ-tools": "1.20.0",
-    "nodeunit": "^0.11.3",
     "pkglint": "1.20.0",
     "sinon": "^8.0.2",
     "ts-mock-imports": "^1.2.6"
@@ -91,6 +89,23 @@
   "bundledDependencies": [
     "minimatch"
   ],
+  "jest": {
+    "moduleFileExtensions": [
+      "js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 60,
+        "statements": 80
+      }
+    },
+    "collectCoverage": true,
+    "coverageReporters": [
+      "lcov",
+      "html",
+      "text-summary"
+    ]
+  },
   "stability": "experimental",
   "awslint": {
     "exclude": [
