--- a/packages/@aws-cdk/assets/package.json
+++ b/packages/@aws-cdk/assets/package.json
@@ -66,12 +66,14 @@
     "@aws-cdk/assert": "1.20.0",
     "@types/minimatch": "^3.0.3",
     "@types/sinon": "^7.5.0",
+    "@types/mock-fs": "^4.10.0",
     "aws-cdk": "1.20.0",
     "cdk-build-tools": "1.20.0",
     "cdk-integ-tools": "1.20.0",
     "pkglint": "1.20.0",
     "sinon": "^8.0.2",
-    "ts-mock-imports": "^1.2.6"
+    "ts-mock-imports": "^1.2.6",
+    "mock-fs": "^4.10.4"
   },
   "dependencies": {
     "@aws-cdk/core": "1.20.0",
