--- a/packages/cdk-assets/package.json
+++ b/packages/cdk-assets/package.json
@@ -42,6 +42,7 @@
     "@types/sinon": "^7.5.0",
     "@types/table": "^4.0.7",
     "@types/uuid": "^3.4.6",
+    "@types/mock-fs": "^4.10.0",
     "@types/winston": "^2.4.4",
     "@types/yaml": "^1.2.0",
     "@types/yargs": "^15.0.0",
@@ -49,6 +50,7 @@
     "cdk-build-tools": "1.20.0",
     "jest": "^24.9.0",
     "jszip": "^3.2.2",
+    "mock-fs": "^4.10.4",
     "mockery": "^2.1.0",
     "pkglint": "1.20.0",
     "sinon": "^8.0.2",
@@ -92,21 +94,20 @@
   },
   "stability": "stable",
   "jest": {
+    "moduleFileExtensions": [
+      "js"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 60,
+        "statements": 80
+      }
+    },
     "collectCoverage": true,
     "coverageReporters": [
       "lcov",
       "html",
       "text-summary"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 45,
-        "statements": 60
-      }
-    },
-    "preset": "ts-jest",
-    "testMatch": [
-      "**/?(*.)+(spec|test).ts?(x)"
     ]
   },
   "peerDependencies": {
